--- a/src/components/Order/CheckoutSummary/CheckoutSummary.module.css
+++ b/src/components/Order/CheckoutSummary/CheckoutSummary.module.css
@@ -3,9 +3,9 @@
     width: 80%;
     margin: auto;
 }
-
+/*
 @media (min-width: 600px) {
     .CheckoutSummary {
         width: 500px;
     }
-}
+}*/
